# clap-path-rs

./: Cargo.toml
examples/json/: main.rs
src/: json.rs  lib.rs  toml.rs
